# music

./: AGENTS.md  Makefile  SCAN.md  pyproject.toml  scan  tag  transcode
src/music/: __main__.py  constants.py  http.py  loudness.py  resolver.py  scan.py  spotify.py  tag.py  tags.py  transcode.py  ui.py  verdict.py
src/music/api/: acoustid.py  musicbrainz.py  spotify.py
tests/: conftest.py  test_constants.py  test_http.py  test_loudness.py  test_resolver.py  test_scan.py  test_spotify.py  test_tag_cli.py  test_tags.py  test_transcode.py  test_ui.py  test_verdict.py
tests/api/: test_acoustid.py  test_musicbrainz.py
