[build-system]
requires = ["uv_build>=0.9.6,<0.12"]
build-backend = "uv_build"

[project]
name = "music"
version = "0.1.0"
description = "Audio library tools: scan collections, fingerprint tracks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mutagen>=1.48.1",
]

[project.scripts]
scan = "music.scan:main"
tag = "music.tag:main"
transcode = "music.transcode:main"

[dependency-groups]
dev = [
    "joshuarli-pytest-parallel>=0.2.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.ty.environment]
root = ["src"]

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
all = "error"
unresolved-import = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "8"

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins (shadowing builtins)
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "RET",    # flake8-return
    "PIE",    # flake8-pie (misc lints)
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print (flag print in library code)
    "TCH",    # flake8-type-checking (move imports to TYPE_CHECKING)
    "PERF",   # perflint
    "FURB",   # refurb
]
ignore = [
    "E501",
    "SIM105",
    "RUF001",
    "RUF003",
    "B904",
    "T201",   # allow print() — these are CLI tools
    "RET505", # allow else-after-return for clarity
    "SIM108", # allow if/else over ternary when clearer
    "TCH",    # don't move imports to TYPE_CHECKING — not worth the complexity for a CLI
]
